--- a/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="CPlusPlus.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter02开始学习C++\chapter02.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter03处理数据\chapter03.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter02开始学习C++\chapter02.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter03处理数据\chapter03.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
