--- a/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="01CPrimerPlus_exercises\chapter03处理数据\chapter03.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter04复合类型\chapter04.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01CPrimerPlus_exercises\chapter02开始学习C++\chapter02.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="01CPrimerPlus_exercises\chapter03处理数据\chapter03.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter04复合类型\chapter04.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
