--- a/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="01CPrimerPlus_exercises\chapter04复合类型\chapter04.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="01CPrimerPlus_exercises\chapter05\chapter05.cpp">
+    <ClCompile Include="01CPrimerPlus_exercises\chapter05循环和关系表达式\chapter05.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -41,7 +41,7 @@
     <ClInclude Include="01CPrimerPlus_exercises\chapter04复合类型\chapter04.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="01CPrimerPlus_exercises\chapter05\chapter05.h">
+    <ClInclude Include="01CPrimerPlus_exercises\chapter05循环和关系表达式\chapter05.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
