--- a/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="01CPrimerPlus_exercises\chapter05循环和关系表达式\chapter05.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter06分支语句和逻辑运算\chapter06.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter07函数C++的编程模块\chapter07.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01CPrimerPlus_exercises\chapter02开始学习C++\chapter02.h">
@@ -44,5 +50,14 @@
     <ClInclude Include="01CPrimerPlus_exercises\chapter05循环和关系表达式\chapter05.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter06分支语句和逻辑运算\chapter06.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter07函数C++的编程模块\chapter07.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="01CPrimerPlus_exercises\chapter06分支语句和逻辑运算\BOP.txt" />
   </ItemGroup>
 </Project>
