--- a/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="01CPrimerPlus_exercises\chapter07函数C++的编程模块\chapter07.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter08函数探幽\chapter08.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01CPrimerPlus_exercises\chapter02开始学习C++\chapter02.h">
@@ -56,8 +59,12 @@
     <ClInclude Include="01CPrimerPlus_exercises\chapter07函数C++的编程模块\chapter07.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter08函数探幽\chapter08.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="01CPrimerPlus_exercises\chapter06分支语句和逻辑运算\BOP.txt" />
+    <Text Include="01CPrimerPlus_exercises\chapter08函数探幽\input.txt" />
   </ItemGroup>
 </Project>
