--- a/CPlusPlus.vcxproj
+++ b/CPlusPlus.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="01CPrimerPlus_exercises\chapter05循环和关系表达式\chapter05.cpp" />
     <ClCompile Include="01CPrimerPlus_exercises\chapter06分支语句和逻辑运算\chapter06.cpp" />
     <ClCompile Include="01CPrimerPlus_exercises\chapter07函数C++的编程模块\chapter07.cpp" />
+    <ClCompile Include="01CPrimerPlus_exercises\chapter08函数探幽\chapter08.cpp" />
     <ClCompile Include="CPlusPlus.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -154,9 +155,11 @@
     <ClInclude Include="01CPrimerPlus_exercises\chapter05循环和关系表达式\chapter05.h" />
     <ClInclude Include="01CPrimerPlus_exercises\chapter06分支语句和逻辑运算\chapter06.h" />
     <ClInclude Include="01CPrimerPlus_exercises\chapter07函数C++的编程模块\chapter07.h" />
+    <ClInclude Include="01CPrimerPlus_exercises\chapter08函数探幽\chapter08.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="01CPrimerPlus_exercises\chapter06分支语句和逻辑运算\BOP.txt" />
+    <Text Include="01CPrimerPlus_exercises\chapter08函数探幽\input.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
