--- a/CPlusPlus.vcxproj
+++ b/CPlusPlus.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="01CPrimerPlus_exercises\chapter06分支语句和逻辑运算\chapter06.cpp" />
     <ClCompile Include="01CPrimerPlus_exercises\chapter07函数C++的编程模块\chapter07.cpp" />
     <ClCompile Include="01CPrimerPlus_exercises\chapter08函数探幽\chapter08.cpp" />
+    <ClCompile Include="01CPrimerPlus_exercises\chapter09内存模型与名称空间\chapter09.cpp" />
     <ClCompile Include="CPlusPlus.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -156,6 +157,7 @@
     <ClInclude Include="01CPrimerPlus_exercises\chapter06分支语句和逻辑运算\chapter06.h" />
     <ClInclude Include="01CPrimerPlus_exercises\chapter07函数C++的编程模块\chapter07.h" />
     <ClInclude Include="01CPrimerPlus_exercises\chapter08函数探幽\chapter08.h" />
+    <ClInclude Include="01CPrimerPlus_exercises\chapter09内存模型与名称空间\chapter09.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="01CPrimerPlus_exercises\chapter06分支语句和逻辑运算\BOP.txt" />
