--- a/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus.vcxproj.filters
@@ -48,6 +48,27 @@
     <ClCompile Include="01CPrimerPlus_exercises\chapter11使用类\chapter11.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter12类和动态内存分配\chapter12.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter13\chapter13.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter14\chapter14.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter15\chapter15.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter16\chapter16.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter17\chapter17.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="01CPrimerPlus_exercises\chapter18\chapter18.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01CPrimerPlus_exercises\chapter02开始学习C++\chapter02.h">
@@ -78,6 +99,27 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="01CPrimerPlus_exercises\chapter11使用类\chapter11.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter12类和动态内存分配\chapter12.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter13\chapter13.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter14\chapter14.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter15\chapter15.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter16\chapter16.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter17\chapter17.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="01CPrimerPlus_exercises\chapter18\chapter18.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
